force-app/main/default/objects/Contact/fields/isInActive__c.field-meta.xml
<CustomField>
    <fullName>isInActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isInActive</label>
    <type>Checkbox</type>
</CustomField>