force-app/main/default/objects/Contact/fields/No_of_contacts__c.field-meta.xml
<CustomField>
    <fullName>No_of_contacts__c</fullName>
    <label>No of contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>