force-app/main/default/objects/Contact/fields/test_schema__c.field-meta.xml
<CustomField>
    <fullName>test_schema__c</fullName>
    <defaultValue>false</defaultValue>
    <label>test schema</label>
    <type>Checkbox</type>
</CustomField>