force-app/main/default/objects/Contact/recordTypes/Edit.recordType-meta.xml
<RecordType>
    <fullName>Edit</fullName>
    <active>true</active>
    <label>Edit</label>
</RecordType>