force-app/main/default/objects/Contact/recordTypes/Read.recordType-meta.xml
<RecordType>
    <fullName>Read</fullName>
    <active>true</active>
    <label>Read</label>
</RecordType>