force-app/main/default/objects/Contact/validationRules/length_check.validationRule-meta.xml
<ValidationRule>
    <fullName>length_check</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Department ) &gt; 6</errorConditionFormula>
    <errorDisplayField>Department</errorDisplayField>
    <errorMessage>len &gt; 6</errorMessage>
</ValidationRule>