force-app/main/default/objects/Contact/validationRules/Namec.validationRule-meta.xml
<ValidationRule>
    <fullName>Namec</fullName>
    <active>false</active>
    <errorConditionFormula>CONTAINS(&apos;sabya&apos;, LastName )</errorConditionFormula>
    <errorMessage>Name cannot be Sabya</errorMessage>
</ValidationRule>